Module 9 assignment completed

--- a/d3-coordinated-viz/index.html
+++ b/d3-coordinated-viz/index.html
@@ -15,6 +15,7 @@
 	
 		<script type="text/javascript" src="lib/d3.js"></script>
 		<script type="text/javascript" src="lib/topojson.js"></script>
+		<script type="text/javascript" src="lib/simple-statistics.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>	
 	</body>
 </html>
